Fixed: Get user info by using token
